--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,8 @@ body {
   color: white;
   background-color: black;
   width:100%;
+  margin:0;
+  padding:0;
 }
 
 h1 {
@@ -36,6 +38,7 @@ h2 {
   width: 960px;
   display: flex;
   flex-direction: column;
+  margin:0;
 
 }
 
@@ -110,6 +113,13 @@ span {
   text-align: center;
   font-family: "Helvetica";
 
+}
+
+/*viens t amuser Styling*/
+
+.amatrice {
+  padding-top:2rem;
+  padding-bottom:2rem;
 }
 
 /*Product Grid Styling*/
